tests/compile_fail/from_fn_with_closure.rs
fn main() {
    let var = 123;
    dynify::from_fn!(move || var);
}
